wp-content/themes/giger-kms/src/sass/_cards.scss
/** == Cards (_cards.scss) == **/

/* thumbnails */
@mixin cell-thumbnail() {
	a { display: block; }

	img {
		width: 100%;
		height: auto;
	}

	figcaption {
		display: block;
		@include sub-title(meta);
		color: $color-text-light;
		margin-top: $element-padding-base /4 ;

		p { margin: 0; }
	}

}

/** Thumbnails **/
.tst-thumbnail {
	width: 100%;
}

.tst-thumbnail__nopicture {
	width: 100%;
	min-height: 50px;
	height: 50%;
}

.tst-thumbnail__frame {
	width: 100%;
	background: $color-secondary-alt;
	margin-bottom: $element-padding-base;
}


.flex .tst-thumbnail__picture {
	display: block;
	width: 100%;
}

.fixed {
	position: relative;

	&:after {
		content: '';
		display: block;
		height: 0;
		width: 100%;
	}

	.tst-thumbnail__frame {
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
		display: block;
		overflow: hidden;
	}

	.tst-thumbnail__picture {
		img {
			min-width: 100%;
			width: auto;
			max-width: 120%;

			min-height: 100%;
			height: auto;

			position: absolute;
			top: 50%;
			left: 50%;
			@include transform(translate(-50%, -50%));
		}
	}

	&.standard { padding-bottom: 61.8%; }
	&.cover { padding-bottom: 61.8%; } //temp 
	&.square { padding-bottom: 100%; }
}

.no-js .lazyload { display: none; }
.lazyload,
.lazyloading {
    opacity: 0;
}
.lazyloaded {
    opacity: 1;
	@include transition(opacity 0.3s);
}


/* cells */
.cell {

}

.cell__title{
	margin-bottom: $element-padding-base;
	margin-top: $base/2;
	@include post-title(inlist);

	a, a:visited {
		color: $color-text-black;
	}
	a:hover { color: $color-link-two; }

	.date {
		@include sub-title();
		margin-left: $element-padding-base/2;
	}

	&:first-letter { text-transform: uppercase; }
}

.cell__thumb {
	margin-top: $element-padding-base;
	@include cell-thumbnail();
	max-width: 500px;
}

.cell__cover {
    @include cell-thumbnail();
}

.tst-book-no-cover {
    .tst-thumbnail__frame {

        text-align:center;
        background-color: lighten($sand, 20%);

        .material-icons {
            font-size: 120px;
            color: $color-white;
        }
    }
}

.cell__title--project {
	margin-bottom: $element-padding-base/4;
}

.cell__subtitle {
	@include sub-title();
	margin-bottom: $element-padding-base;
}

.cell__text--project {
	p { margin-bottom: $element-padding-base /2; }
	p:last-child { margin-bottom: 0;}

	//add lists
}

/** card **/
.cell-bg {
	background: $color-link-two;
	flex: 1 1 auto;
}

.card {
	height: 100%;
	width: 100%;

	a {
		height: 100%;
		width: 100%;
	}
}

.card.has-icon {
	padding: $element-padding-base;
	text-align: center;

	.card__link {
		height: 100%;
		width: 100%;
		display: flex;
		flex-flow: column nowrap;
		justify-content: center;
		align-items: center;
	}

	.card__link_content {

	}
}


.card__icon {
	color: $color-white;
	width: 110px;
	height: 110px;
	text-align: center;
	padding-top: 17px;
	border-radius: 50%;
	margin: 0 auto;

	i { font-size: 70px; }

	@include for(medium-screens) {

	}

}

.card__title {
	@include header-title(title);

	.has-thumb & {
		margin-top: 0;
		padding: $element-padding-base $element-padding-base/2;
		background: $color-white;
		color: $color-text-black;
		border-left: 6px solid $color-link-two;
	}

	.widget & {
		@include header-title(widget_card);
		font-weight: normal;
	}

	.has-icon & {
		text-align: center;
		color: $color-white;
		margin-top: $element-padding-base;
	}

}

.card__subtitle {
	@include header-title(widget);

	.widget & {
		@include header-title(widget_subcard);
	}

	.has-icon & {
		text-align: center;
		color: $color-white;
		margin-top: $base/2;
	}
}

.card__excerpt {
	@include sub-title(extend);
	color: $color-white;
    padding: $element-padding-base;
    background-color: $color-link-two;
}

.widget--card:nth-of-type(1) {
    .card__excerpt {
       background-color: $color-link-one;
    }

    .card__title {
       border-color: $color-link-one;
    }

}

.widget--card:nth-of-type(3) {
    .card__excerpt {
       background-color: $color-link-four;
    }

    .card__title {
       border-color: $color-link-four;
    }

}

.widget--card:nth-of-type(4) {
    .card__excerpt {
       background-color: $color-link-five;
    }

    .card__title {
       border-color: $color-link-five;
    }

}

.widget--card:last-of-type {
	.card__excerpt {
	   background-color: $color-link-three;
	}

    .card__title {
       border-color:$color-link-three;
    }
}

.card--news .card__title {
	color: $color-white;
}

.has-thumb .card__link {
	height: 100%;
	display: flex;
	flex-flow: column nowrap;
	justify-content: space-between;

	.card__title {
		flex: 1 1 auto;
		@include post-title();
	}
}

.scheme-one {
	background: $color-link-one;

	.card__icon {
		background: $color-white;
		i { color: $color-link-one; }
	}

	.has-thumb .card__title  {
		border-left-color: $color-link-one;
	}
}

.scheme-two {
	background: $color-link-two;

	.card__icon {
		background: rgba(0,0,0, 0.4);
		i { color: $color-white; }
	}

	.has-thumb .card__title  {
		border-left-color: $color-link-two;
	}
}

.scheme-three {
	background: $color-link-five;

	.card__icon {
		background: $color-white;
		i { color: $color-link-five; }
	}

	.has-thumb .card__title  {
		border-left-color: $color-link-five;
	}
}

.scheme-four {
	background: $color-link-four;

	.card__icon {
		background: rgba(0,0,0, 0.4);
		i { color: $color-white; }
	}

	.has-thumb .card__title  {
		border-left-color: $color-link-four;
	}
}

.scheme-five {
	background: $color-link-three;

	.card__icon {
		background: $color-white;
		i { color: $color-link-three; }
	}

	.has-thumb .card__title  {
		border-left-color: $color-link-three;
	}
}

/* story card */
.cell-story {
	display:block;
	text-align:center;
	padding: $base;

	.story-author {
        display:block;

        .story-author-ava {
            display:block;
			@include transition(all 0.35s);
        }

        .story-author-name {
            display:block;
			margin-top: $base;
            @include post-title(inlist);
			color: $color-link-two;
        }
    }

    .story-ex {
        display:block;
		margin-top: $base*2;
		@include body-text();
        color: $color-text;
        text-align:left;
		padding: 0 $base;
    }

	@include transition(all 0.35s);

	&:hover {

		.story-ex { color: $color-text-black; }
		.story-author-name { color: darken($color-link-two, 5%);}

		.story-author-ava {
			filter: contrast(120%);
		}
	}
}

.cell-inlist-story {
    text-align:left;

    .cell-ex {

	    margin-bottom: $element-padding-base;
	    margin-top: $base/2;
	    @include post-title(small_title);

	    a, a:visited {
	        color: $color-text-black;
	    }

	    a:hover {
	       color: $color-link-two;
        }

	    .date {
	        @include sub-title();
	        margin-left: $element-padding-base/2;
	    }
    }

}

